# ultimate-fast

./: .gitignore  Makefile  README.md  alembic.ini  docker-compose.local.yml  example.db  prestart.sh  pyproject.toml  run.sh
app/: backend_pre_start.py  example.db  main.py  schemas.py
app/api/: deps.py
app/api/api_v1/endpoints/: recipe.py
app/crud/: base.py  crud_recipe.py  crud_user.py
app/db/: base.py  init_db.py
app/schemas/: recipe.py  user.py
app/templates/: index.html
backend/: Dockerfile  Makefile
backend/app/: prestart.py  prestart.sh  pyproject.toml
backend/app/app/api/api_v1/endpoints/: auth.py  recipe.py
backend/app/app/core/: config.py
backend/app/app/crud/: __init__.py  base.py  crud_user.py
backend/app/app/db/: session.py
backend/app/app/models/: user.py
backend/app/app/schemas/: user.py
backend/app/migrations/: env.py
frontend/: .eslintrc.js  package-lock.json  package.json  tailwind.config.js
frontend/public/: index.html
frontend/src/: App.js  client.js  config.js  index.js
frontend/src/components/DashboardHeader/: index.jsx
frontend/src/components/Footer/: index.jsx
frontend/src/components/Idea/: index.jsx
frontend/src/components/Model/: PopupModal.jsx
frontend/src/components/Recipe/: index.jsx
frontend/src/pages/login/: index.jsx
frontend/src/pages/sign-up/: index.jsx
migration/: env.py
migrations/: te.py
migrations/versions/: 8a0546624cdb_created_all_tables.py  b145a7807197_init_database.py  ef58e6912bb6_created_tables.py
nginx/: default.conf
