[tool.poetry]
name = "ultimate-fast"
version = "0.1.0"
description = "fastapi application"
authors = ["Xiaoshan Jiang <jasonxiaoshanjiang@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.8, <3.11"
uvicorn = "~0.11.3"
fastapi = "~0.68.0"
python-multipart = "~0.0.5"
pydantic = {extras = ["email"], version = "~1.8.1"}
Jinja2 = "^3.0.2"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
poetry-test = "poetry_test.console:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

