[tool.poetry]
name = "ultimate-fast"
version = "0.1.0"
description = "fastapi application"
authors = ["Xiaoshan Jiang <jasonxiaoshanjiang@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.8, <3.11"
uvicorn = "~0.11.3"
fastapi = "~0.68.0"
python-multipart = "~0.0.5"
pydantic = {extras = ["email"], version = "~1.8.1"}
Jinja2 = "^3.0.2"
SQLAlchemy = "^1.4.22"
alembic = "^1.6.5"
tenacity = "^8.0.1"
greenlet = "^1.1.2"
httpx = "0.18.1"
passlib = {extras = ["bcrypt"], version = "^1.7.2"}
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
cffi = "^1.15.0"
python-dotenv = "^0.20.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
